--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
     "react-select": "^5.10.2",
+    "react-select-async-paginate": "^0.7.11",
     "react-window": "^1.8.11"
   },
   "devDependencies": {
