--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-virtual": "^3.13.12",
     "bootstrap": "^5.3.6",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
     "react-select": "^5.10.2",
