--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.65.0",
     "react-router-dom": "^7.6.1",
     "react-select": "^5.10.2",
     "react-select-async-paginate": "^0.7.11",
